--- a/src/routes/Patient/UserShow.less
+++ b/src/routes/Patient/UserShow.less
@@ -10,6 +10,15 @@
   }
 }
 
+.gridStyle{
+  width: 20%;
+  background-color: '#7c01ff';
+};
+
+.center {
+  float: center;
+}
+
 .tableListForm {
   :global {
     .ant-form-item {
