--- a/src/routes/Patient/UserShow.less
+++ b/src/routes/Patient/UserShow.less
@@ -10,6 +10,18 @@
   }
 }
 
+.upload-list-inline .ant-upload-list-item {
+  float: left;
+  width: 200px;
+  margin-right: 8px;
+}
+.upload-list-inline .ant-upload-animate-enter {
+  animation-name: uploadAnimateInlineIn;
+}
+.upload-list-inline .ant-upload-animate-leave {
+  animation-name: uploadAnimateInlineOut;
+}
+
 .gridStyle{
   width: 20%;
   background-color: '#7c01ff';
